<resources>
    <string name="app_name">Guessword</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="string_incorrect_login_password">Incorrect login/password combination</string>
    <string name="string_hint_answerField">Enter the answer</string>
    <string name="string_button_nextButt">Next</string>
    <string name="button_previous_wrong">Prev -</string>
    <string name="button_previous_right">Prev +</string>
    <string name="button_i_dont_know">-</string>
    <string name="button_i_know">+</string>
    <string name="button_answer">Answer</string>
    <string name="menu_add">Add</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_menu_item_edit_collection">Edit collection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_hint_foreignWord">Foreign word</string>
    <string name="edit_text_hint_nativeWord">Native word</string>
    <string name="drawer_item_menu_learn">Learn</string>
    <string name="edit_text_hint_transription">Transcription</string>
    <string name="edit_text_hint_label">Label</string>
    <string name="textView_recView_right">RIGHT</string>
    <string name="textView_recView_slash">/</string>
    <string name="textView_recView_wrong">WRONG</string>
    <string name="no_label">NO LABEL</string>
    <string name="phrasesRecView_created">Created:</string>
    <string name="phrasesRecView_accessed">Accessed:</string>
    <string name="phrasesRecView_probability">Probability:</string>
    <string name="phrasesRecView_multiplier">Multiplier:</string>
    <string name="unknown_date">UNKNOWN</string>
    <string name="never_accessed">NEVER</string>
    <string name="save_dialog_button">Save</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="drawer_item_menu_logout">Logout</string>
    <string name="no_available_users_msg">No available users</string>
    <string name="multiplier_and_probFactor_format">%1$,.2f</string>
    <string name="creatianDate_template_format">dd/MM/y</string>
    <string name="lastAccessDate_templateFormat">dd/MM/y HH:mm</string>
    <string name="dialogTitle_addPhrase">Add phrase</string>
    <string name="questionAdapter_timeFormat">HH:mm:ss</string>
    <string name="dialog_your_password">Your password</string>
    <string name="dialog_title_password">Password</string>
</resources>
