<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_above="@+id/cityEnterView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityEnterView"
        android:padding="5dp"
        android:layout_above="@+id/buttonGroup">

        <EditText
            android:hint="@string/string_hint_answerField"
            android:id="@+id/editTextCity"
            android:layout_width="0dp"
            android:layout_weight="0.60"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
        <Button
            android:id="@+id/answerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_answer"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:id="@+id/buttonGroup"
        android:padding="5dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/buttonPreviousWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="previousWrongButtonClicked"
            android:text="@string/button_previous_wrong"/>
        <Button
            android:id="@+id/buttonPreviousRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="previousRightButtonClicked"
            android:text="@string/button_previous_right"/>
        <Button
            android:id="@+id/buttonIDoNotKnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="wrongButtonClicked"
            android:text="@string/button_i_dont_know"/>
        <Button
            android:id="@+id/buttonIKnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rightButtonClicked"
            android:text="@string/button_i_know"/>

    </LinearLayout>


</RelativeLayout>



